# C-Project_demo

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: build.yml
include/: math_utils.h
src/: main.cpp  math_utils.cpp
tests/: test_math_utils.cpp
